--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "SquareSmash",
+  "name": "index1",
   "version": "0.0.0",
   "private": true,
   "scripts": {
@@ -9,9 +9,22 @@
     "body-parser": "~1.13.2",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
-    "express": "~4.13.1",
+    "express": "^4.13.4",
     "jade": "~1.11.0",
     "morgan": "~1.6.1",
     "serve-favicon": "~2.3.0"
-  }
+  },
+  "description": "A game",
+  "main": "app.js",
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/bob7gopisri/SquareSmash.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/bob7gopisri/SquareSmash/issues"
+  },
+  "homepage": "https://github.com/bob7gopisri/SquareSmash#readme"
 }
